--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -357,13 +357,13 @@
           <div id="p2Summary" style="display: none; margin: 8px 0; padding: 10px; border-left: 3px solid var(--neon-purple)"></div>
 
           <div id="levelSetup" style="display: none; margin-top: 12px">
-            <label style="margin-right: 8px"
-              >Level
+            <div style="margin-right: 8px">
+              <label>Level</label>
               <div class="dd" id="level-dd">
                 <button type="button" class="dd-toggle" onclick="ddToggle('level-dd')" id="level-btn">one</button>
                 <div class="dd-menu" id="level-menu"></div>
               </div>
-            </label>
+            </div>
           </div>
 
           <div class="controls" id="beginControls" style="display: none; margin-top: 10px">
