--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -289,7 +289,7 @@
       <h1>🎮 Me-Dot-U-Dot</h1>
 
       <div class="controls" id="topControls" style="margin-top: 8px; margin-bottom: 12px">
-        <button class="btn-primary" onclick="startNewGameWizard()" id="startNewBtn">Start New GAME</button>
+        <button class="btn-primary" onclick="startNewGameWizard()" id="start-game-btn">Start New GAME</button>
       </div>
 
       <section style="margin-bottom: 16px">
