fix level dropdown to change when game starts

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -366,6 +366,11 @@
             </div>
           </div>
 
+          <div id="levelDisplay" style="display: none; margin-top: 12px">
+            <span style="color: var(--muted); font-size: 14px; margin-right: 8px">Level:</span>
+            <span id="level-value" style="color: var(--text); font-weight: 500"></span>
+          </div>
+
           <div class="controls" id="beginControls" style="display: none; margin-top: 10px">
             <button class="btn-primary" id="beginBtn" onclick="beginGame()" disabled>Begin Game</button>
           </div>
