hide Begin Game button once the game has started

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -323,7 +323,7 @@
             </div>
           </div>
 
-          <div id="p1Summary" style="display: none; margin: 8px 0; padding: 10px; border-left: 3px solid var(--neon-cyan)"></div>
+          <div id="p1Summary" style="display: none; margin: 8px 0; padding: 10px; border-left: 3px solid var(--neon-green)"></div>
 
           <div id="p2Setup" style="display: none; margin: 12px 0; padding: 12px; border: 1px solid rgba(0, 0, 0, 0.2); border-radius: 10px; background: rgba(0, 0, 0, 0.15)">
             <h4>Player 2</h4>
