--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -911,6 +911,10 @@
             <div class="stat-label">Moves</div>
             <div id="p1Moves" class="stat-value">0</div>
           </div>
+          <div class="stat-item">
+            <div class="stat-label">Think Time</div>
+            <div id="p1Timer" class="stat-value">0s</div>
+          </div>
           <button id="p1JournalBtn" class="journal-btn" onclick="openJournalViewer('p1')" style="display: none">View Journal</button>
         </div>
       </div>
@@ -1002,6 +1006,10 @@
           <div class="stat-item">
             <div class="stat-label">Moves</div>
             <div id="p2Moves" class="stat-value">0</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-label">Think Time</div>
+            <div id="p2Timer" class="stat-value">0s</div>
           </div>
           <button id="p2JournalBtn" class="journal-btn" onclick="openJournalViewer('p2')" style="display: none">View Journal</button>
         </div>
