tweak system prompt, add timestamp to playbook journal viewer

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -937,10 +937,10 @@
               <div class="journal-field">
                 <span class="journal-label">Agent ID:</span>
                 <span id="journalAgentId" class="journal-value">-</span>
-              </div>
-              <div class="journal-field">
                 <span class="journal-label">Sequence ID:</span>
                 <span id="journalSequenceId" class="journal-value">-</span>
+                <span class="journal-label">Updated At:</span>
+                <span id="journalUpdatedAt" class="journal-value">-</span>
               </div>
             </div>
 
