--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -8,6 +8,62 @@
     <meta http-equiv="Expires" content="0" />
     <title>Me-Dot-U-Dot Game</title>
     <style>
+      /* Navigation Menu Styles */
+      .nav-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        padding: 10px;
+      }
+
+      .menu-btn {
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 5px;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+      }
+
+      .menu-btn:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+
+      .menu-icon {
+        width: 24px;
+        height: 24px;
+      }
+
+      .menu-popup {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: var(--bg-color);
+        border: 1px solid var(--neon-color);
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+        min-width: 200px;
+        z-index: 1001;
+      }
+
+      .menu-item {
+        padding: 10px 15px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        color: var(--text-color);
+      }
+
+      .menu-item:hover {
+        background-color: var(--neon-color);
+        color: var(--bg-color);
+      }
+
+      .menu-item.current {
+        background-color: rgba(255, 255, 255, 0.1);
+        cursor: default;
+      }
+
       :root {
         --bg: #0b0f1a;
         --panel: #0f1526;
@@ -836,6 +892,17 @@
     </style>
   </head>
   <body>
+    <!-- Navigation Menu -->
+    <div class="nav-menu">
+      <button class="menu-btn" onclick="toggleMenu()" title="Navigation Menu">
+        <img src="/images/hamburger-menu-icon.png" alt="Menu" class="menu-icon" />
+      </button>
+      <div id="menuPopup" class="menu-popup" style="display: none">
+        <div class="menu-item current">Game</div>
+        <div class="menu-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
+      </div>
+    </div>
+
     <!-- Top Control Bar -->
     <div class="control-bar">
       <div class="control-left">
