--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -7,255 +7,10 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Me-Dot-U-Dot Playbook Viewer</title>
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/playbook.css" />
     <style>
-      /* Navigation Menu Styles */
-      .nav-menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1000;
-        padding: 10px;
-      }
-
-      .menu-btn {
-        background: none;
-        border: none;
-        cursor: pointer;
-        padding: 5px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-      }
-
-      .menu-btn:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-      }
-
-      .menu-icon {
-        width: 24px;
-        height: 24px;
-      }
-
-      .menu-popup {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        background-color: var(--bg-color);
-        border: 1px solid var(--neon-color);
-        border-radius: 5px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-        min-width: 200px;
-        z-index: 1001;
-      }
-
-      .menu-item {
-        padding: 10px 15px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-        color: var(--text-color);
-      }
-
-      .menu-item:hover {
-        background-color: var(--neon-color);
-        color: var(--bg-color);
-      }
-
-      .menu-item.current {
-        background-color: rgba(255, 255, 255, 0.1);
-        cursor: default;
-      }
-
-      /* Base Styles */
-      :root {
-        --bg-color: #0b0f1a;
-        --panel-color: #0f1526;
-        --text-color: #e6e9ef;
-        --muted-color: #9aa3b2;
-        --neon-color: #00e5ff;
-        --error-color: #ff4444;
-        --success-color: #44ff44;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: var(--bg-color);
-        color: var(--text-color);
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      /* Player Selection Styles */
-      .player-selection {
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        background-color: var(--panel-color);
-        border-bottom: 1px solid var(--neon-color);
-      }
-
-      .player-selection label {
-        font-size: 1.2em;
-        color: var(--neon-color);
-      }
-
-      /* Dropdown Styles */
-      .dd-container {
-        position: relative;
-        min-width: 200px;
-      }
-
-      .dd-toggle {
-        width: 100%;
-        padding: 10px;
-        background-color: var(--panel-color);
-        border: 1px solid var(--neon-color);
-        color: var(--text-color);
-        cursor: pointer;
-        text-align: left;
-        border-radius: 5px;
-      }
-
-      .dd {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background-color: var(--panel-color);
-        border: 1px solid var(--neon-color);
-        border-top: none;
-        border-radius: 0 0 5px 5px;
-        display: none;
-        z-index: 1000;
-      }
-
-      .dd-item {
-        padding: 10px;
-        cursor: pointer;
-      }
-
-      .dd-item:hover {
-        background-color: var(--neon-color);
-        color: var(--bg-color);
-      }
-
-      /* Journal Viewer Styles */
-      .journal-viewer {
-        flex: 1;
-        margin: 20px auto;
-        padding: 20px;
-        background-color: var(--panel-color);
-        border: 1px solid var(--neon-color);
-        border-radius: 10px;
-        width: 90%;
-        max-width: 1200px;
-        min-height: 500px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .journal-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid var(--neon-color);
-        padding-bottom: 10px;
-      }
-
-      .journal-header h3 {
-        margin: 0;
-        color: var(--neon-color);
-      }
-
-      .journal-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-      }
-
-      .journal-info {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
-      }
-
-      .journal-field {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-      }
-
-      .journal-label {
-        color: var(--neon-color);
-      }
-
-      .journal-value {
-        color: var(--text-color);
-      }
-
-      .journal-instructions-container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
-
-      .journal-instructions-label {
-        color: var(--neon-color);
-      }
-
-      .journal-instructions {
-        background-color: var(--bg-color);
-        padding: 15px;
-        border-radius: 5px;
-        white-space: pre-wrap;
-        overflow-y: auto;
-        flex: 1;
-      }
-
-      .journal-navigation {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-      }
-
-      .nav-btn {
-        background: none;
-        border: 1px solid var(--neon-color);
-        color: var(--neon-color);
-        padding: 10px 20px;
-        cursor: pointer;
-        border-radius: 5px;
-        font-size: 1.2em;
-      }
-
-      .nav-btn:hover {
-        background-color: var(--neon-color);
-        color: var(--bg-color);
-      }
-
-      .nav-btn:disabled {
-        opacity: 0.5;
-        cursor: not-allowed;
-      }
-
-      @media (max-width: 768px) {
-        .journal-viewer {
-          width: 95%;
-          margin: 10px auto;
-          padding: 10px;
-        }
-
-        .journal-info {
-          flex-direction: column;
-          gap: 10px;
-        }
-      }
+      /* Any page-specific overrides can go here */
     </style>
   </head>
   <body>
@@ -313,6 +68,7 @@
       </div>
     </div>
 
-    <script src="/playbook.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/playbook.js"></script>
   </body>
 </html>
