--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -1083,6 +1083,7 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
