fix journal viewer css

--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -29,9 +29,9 @@
     </div>
 
     <!-- Player Selection -->
-    <div class="player-selection">
+    <div class="agent-selection">
       <!-- <label>Select Agent:</label> -->
-      <div class="dd-container">
+      <div class="dd-container agent-selection-dd-container">
         <button type="button" class="dd-toggle" onclick="ddToggle('player-dd')" id="player-dd-btn">Select Agent</button>
         <div class="dd-menu" id="player-dd-menu"></div>
       </div>
