--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -23,6 +23,7 @@
         </button>
         <div id="nav-menu" class="dd-menu">
           <div class="dd-item" onclick="window.location.href='/'">Game</div>
+          <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
           <div class="dd-item current">Playbook Viewer</div>
         </div>
       </div>
