--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -22,6 +22,7 @@
             </button>
             <div id="nav-menu" class="dd-menu">
               <div class="dd-item current">Game</div>
+              <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
               <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
             </div>
           </div>
